@@ -1,1 +1,1 @@
-<font size="-3">Os dereitos de todo o contido pertencen ao seu autor. &copy;2009.</font>
+<font size="-3">Os dereitos de todo o contido pertencen ao seu autor. &copy;2010.</font>
