@@ -1,1 +1,1 @@
-<font size="-3">著作權歸內容作者所有  &copy; 2009。</font>
+<font size="-3">著作權歸內容作者所有  &copy; 2010。</font>
