@@ -47,10 +47,11 @@ Bugfixes:
 Bugfixes:
 
   * When renaming a topic, the data could be incorrectly stored in the database
-    if the new topic name included an underscore.  Test case provided by Rudi
-    Wiesmayr.
+    if the new topic name included an underscore or a plus sign.  Test case
+    provided by Rudi Wiesmayr.
   * Links to a virtual wiki page with the same page name ("[[:test:PageName]]")
     will now parse correctly again.  Reported by Tom Schueller.
+  * Update the default footer page's copyright notice to 2010.
 
 Translation Updates:
 
